--- a/latex/soluzioni/sol_es_2.tex
+++ b/latex/soluzioni/sol_es_2.tex
@@ -22,6 +22,8 @@
 % Python style for highlighting
 \newcommand\pythonstyle{\lstset{
 language=Python,
+numbers=left,
+numberstyle=\tiny\color{black},
 basicstyle=\ttm,
 otherkeywords={self},             % Add keywords here
 keywordstyle=\ttb\color{deepblue},
