Aggiornati esercizi di tutorato

--- a/latex/esercitazioni/es_tutorato_3.tex
+++ b/latex/esercitazioni/es_tutorato_3.tex
@@ -108,11 +108,11 @@ $H(i,j)=\frac{1}{i+j+1}$ $i,j=0,\dots,n-1$
 Ad esempio:\\
 \begin{center}
 $
-\Bigg(
+\left(
 \begin{bmatrix} 
 0 & \pi & 2\pi\\[4pt]
 \pi & \frac{3}{2}\pi & \frac{\pi}{4} \\[4pt]
-\pi & 0 & \frac{-1}{4}\pi\end{bmatrix}, sin \Bigg) \longmapsto 
+\pi & 0 & \frac{-1}{4}\pi\end{bmatrix}, sin \right) \longmapsto 
 \begin{bmatrix} 
 0 & 0 & 0\\[4pt]
 0 & -1 & \sqrt[]{2}/2 \\[4pt]
