Materiale per lezione su OOP

--- a/notebooks_v3/Lab 13.v3.ipynb
+++ b/notebooks_v3/Lab 13.v3.ipynb
@@ -109,7 +109,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Per sapere quando un oggetto di tipo iteratore ha iterato su tutta la lista conviene chiamare la funzione `next(iterator, default)` passandogli oltre all'itereratore un valore di default."
+      "Per sapere quando un oggetto di tipo iteratore ha iterato su tutta la lista conviene chiamare la funzione `next(iterator, default)` passandogli oltre all'iteratore un valore di default."
      ]
     },
     {
@@ -341,9 +341,127 @@
      "prompt_number": null
     },
     {
-     "cell_type": "markdown",
+     "cell_type": "heading",
+     "level": 3,
      "metadata": {},
-     "source": []
+     "source": [
+      "Tail recursions"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def LazyReverse(Ls):\n",
+      "    def Cat(v, As):  \n",
+      "        yield v\n",
+      "        for l in As:\n",
+      "            yield l\n",
+      "        \n",
+      "    def ReverseRec(As, v):\n",
+      "        if As == []:\n",
+      "            return [v]\n",
+      "        else:\n",
+      "            return Cat(As[-1], ReverseRec(As[:-1], v))\n",
+      "    return ReverseRec(Ls, [])\n",
+      "\n",
+      "As = LazyReverse([4,3,2,5,6,3])\n",
+      "print(next(As), next(As), next(As))"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "3 6 5\n"
+       ]
+      }
+     ],
+     "prompt_number": 3
+    },
+    {
+     "cell_type": "heading",
+     "level": 3,
+     "metadata": {},
+     "source": [
+      "Memoization"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def Fib(n):\n",
+      "    if n == 0:\n",
+      "        return 0\n",
+      "    if n == 1:\n",
+      "        return 1\n",
+      "    return Fib(n-1) + Fib(n-2)\n",
+      "\n",
+      "import time\n",
+      "\n",
+      "start = time.time()\n",
+      "print(Fib(31))\n",
+      "end = time.time()\n",
+      "print(end - start)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1346269\n",
+        "0.7029097080230713\n"
+       ]
+      }
+     ],
+     "prompt_number": 17
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from functools import lru_cache\n",
+      "\n",
+      "@lru_cache(maxsize=50)\n",
+      "def Fib(n):\n",
+      "    if n == 0:\n",
+      "        return 0\n",
+      "    if n == 1:\n",
+      "        return 1\n",
+      "    return Fib(n-1) + Fib(n-2)\n",
+      "\n",
+      "start = time.time()\n",
+      "print(Fib(31))\n",
+      "end = time.time()\n",
+      "print(end - start)"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "1346269\n",
+        "0.0\n"
+       ]
+      }
+     ],
+     "prompt_number": 16
+    },
+    {
+     "cell_type": "code",
+     "collapsed": true,
+     "input": [],
+     "language": "python",
+     "metadata": {},
+     "outputs": [],
+     "prompt_number": null
     }
    ],
    "metadata": {}
