--- a/notebooks/Lab 13.ipynb
+++ b/notebooks/Lab 13.ipynb
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Per sapere quando un oggetto di tipo iteratore ha iterato su tutta la lista conviene chiamare la funzione `next(iterator, default)` passandogli oltre all'itereratore un valore di default."
+    "Per sapere quando un oggetto di tipo iteratore ha iterato su tutta la lista conviene chiamare la funzione `next(iterator, default)` passandogli oltre all'iteratore un valore di default."
    ]
   },
   {
@@ -319,6 +319,122 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "### Tail recursions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 6 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "def LazyReverse(Ls):\n",
+    "    def Cat(v, As):  \n",
+    "        yield v\n",
+    "        for l in As:\n",
+    "            yield l\n",
+    "        \n",
+    "    def ReverseRec(As, v):\n",
+    "        if As == []:\n",
+    "            return [v]\n",
+    "        else:\n",
+    "            return Cat(As[-1], ReverseRec(As[:-1], v))\n",
+    "    return ReverseRec(Ls, [])\n",
+    "\n",
+    "As = LazyReverse([4,3,2,5,6,3])\n",
+    "print(next(As), next(As), next(As))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Memoization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1346269\n",
+      "0.7029097080230713\n"
+     ]
+    }
+   ],
+   "source": [
+    "def Fib(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    return Fib(n-1) + Fib(n-2)\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "start = time.time()\n",
+    "print(Fib(31))\n",
+    "end = time.time()\n",
+    "print(end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1346269\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import lru_cache\n",
+    "\n",
+    "@lru_cache(maxsize=50)\n",
+    "def Fib(n):\n",
+    "    if n == 0:\n",
+    "        return 0\n",
+    "    if n == 1:\n",
+    "        return 1\n",
+    "    return Fib(n-1) + Fib(n-2)\n",
+    "\n",
+    "start = time.time()\n",
+    "print(Fib(31))\n",
+    "end = time.time()\n",
+    "print(end - start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": []
   }
  ],
