--- a/notebooks/Lab 15.ipynb
+++ b/notebooks/Lab 15.ipynb
@@ -225,6 +225,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class StudenteStd(object):\n",
+    "    def __init__(self, a, b):\n",
+    "        self.nome = a\n",
+    "        self.cognome = b\n",
+    "        \n",
+    "    def __str__(self):\n",
+    "        return \"{}, {}\".format(self.nome, self.cognome)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
